k8s-files/blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-api
spec:
  type: NodePort
  ports:
    - port: 8880
      targetPort: 8880
      nodePort: 31499  # Use a specific nodePort or let Kubernetes assign one
  selector:
    app: blue-api  # Match this to your deployment selector
