k8s-files/green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-api
spec:
  type: NodePort
  ports:
    - port: 8881
      targetPort: 8881
      nodePort: 31500 # Use a specific nodePort or let Kubernetes assign one
  selector:
    app: green-api  # Match this to your deployment selector
